@@ -31,6 +31,7 @@
 		<tr>	<td> Дата оплаты взноса в КФ: </td>	<td> {{ org.paydate|date }} </td>	</tr>
 		<tr>	<td> Сумма взноса в КФ: </td>		<td> {{ org.paysum }} </td>		</tr>
 		<tr>	<td> Дата оплаты вступительного взноса: </td>	<td> {{ org.paydatevv|date }} </td>	</tr>
+		<tr>	<td> Коментарии: </td>			<td> {{ org.comments }} </td>		</tr>
 	</table>
 {% endblock %}
 {% block body_license %}
