@@ -288,17 +288,19 @@ class	Org(models.Model):
 	name		= models.CharField(null=False, blank=False, max_length=40, unique=True, verbose_name=u'Наименование')
 	fullname	= models.CharField(null=False, blank=False, max_length=100, unique=False, verbose_name=u'Полное наименование')
 	okopf		= models.ForeignKey(Okopf, null=False, blank=False, verbose_name=u'ОКОПФ')
-	egruldate	= models.DateField(null=False, blank=False, verbose_name=u'Дата регистрации в ЕГРЮЛ')
+	egruldate	= models.DateField(null=True, blank=True, verbose_name=u'Дата регистрации в ЕГРЮЛ')
 	inn		= models.PositiveIntegerField(null=False, blank=False, unique=True, verbose_name=u'ИНН')
-	kpp		= models.PositiveIntegerField(null=False, blank=False, verbose_name=u'КПП')
+	kpp		= models.PositiveIntegerField(null=True, blank=True, verbose_name=u'КПП')
 	ogrn		= models.PositiveIntegerField(null=False, blank=False, unique=True, verbose_name=u'ОГРН')
 	laddress	= models.CharField(null=False, blank=False, max_length=100, verbose_name=u'Адрес юридический')
 	raddress	= models.CharField(null=True, blank=True, max_length=100, verbose_name=u'Адрес почтовый')
-	sroregno	= models.PositiveIntegerField(null=False, blank=False, unique=True, verbose_name=u'Реестровый №')
-	sroregdate	= models.DateField(null=False, blank=False, verbose_name=u'Дата членства в НП')
-	paydate		= models.DateField(null=False, blank=False, verbose_name=u'Дата оплаты взноса в КФ')
+	sroregno	= models.PositiveIntegerField(null=True, blank=True, unique=True, verbose_name=u'Реестровый №')
+	sroregdate	= models.DateField(null=True, blank=True, verbose_name=u'Дата членства в НП')
+	paydate		= models.DateField(null=True, blank=True, verbose_name=u'Дата оплаты взноса в КФ')
 	paysum		= models.PositiveIntegerField(null=False, blank=False, verbose_name=u'Сумма взноса в КФ')
-	paydatevv	= models.DateField(null=False, blank=False, verbose_name=u'Дата оплаты вступительного взноса')
+	paydatevv	= models.DateField(null=True, blank=True, verbose_name=u'Дата оплаты вступительного взноса')
+	comments	= models.TextField(null=True, blank=True, verbose_name=u'Коментарии')
+	public		= models.BooleanField(null=False, blank=False, default=False, verbose_name=u'Публиковать')
 	okveds		= models.ManyToManyField(Okved, through='OrgOkved', verbose_name=u'Коды ОКВЭД')
 	stuffs		= models.ManyToManyField(Person, through='OrgStuff', verbose_name=u'Штат')
 	events		= models.ManyToManyField(EventType, through='OrgEvent', verbose_name=u'События')
